# pyirecord

./: .env.example  CONTRIBUTING.md  README.md  notes.md  pyproject.toml
src/pyirecord/: __init__.py  attributes.py  auth.py  http.py  media.py  observations.py  schema.py  surveys.py  taxa.py
src/pyrecord/: observations.py
test/: conftest.py  test_attributes.py  test_media.py  test_observation.py  test_surveys.py  test_taxa.py
test/integration/: test_e2e.py
