[project]
name = "pyirecord"
version = "0.0.1"
description = "A client library for iRecord similar to pyinaturalist"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx", "python-dotenv", "requests", "pydantic"]

[project.optional-dependencies]
test = ["pytest"]
lint = ["ruff"]
dev = ["pyirecord[test,lint]"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
